--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,29 @@
 .ipynb_checkpoints/Data_exploration-checkpoint.ipynb
 .ipynb_checkpoints/mcn-checkpoint.ipynb
+notebooks/.ipynb_checkpoints/Data_exploration-checkpoint.ipynb
+notebooks/.ipynb_checkpoints/R_testing-checkpoint.ipynb
+notebooks/R_model_files/negbin_rep_id_CRE_id.RDS
+notebooks/R_model_files/poisson_rep_id_CRE_id.RDS
+notebooks/R_model_files/zip_rep_id_CRE_id_rep_id.RDS
+notebooks/R_model_files/znb_rep_id_CRE_id_rep_id.RDS
+notebooks/zinb_normed_residuals_hist_grouped.svg
+notebooks/zinb_normed_residuals_hist.svg
+notebooks/zinb_normed_residuals_over_shendure_mBC_UMIs_grouped.png
+notebooks/zinb_normed_residuals_over_shendure_mBC_UMIs.png
+notebooks/figs/real_noninfl_dist.svg
+notebooks/figs/real_zeroinfl_dist.svg
+notebooks/figs/sim_pred_zinb_dist.svg
+notebooks/figs/sim_pred_zinb_resid.svg
+notebooks/figs/zinb_fake_dist.csv
+notebooks/figs/zinb_normed_residuals_hist.svg
+notebooks/figs/zinb_normed_residuals_over_shendure_mBC_UMIs.pdf
+notebooks/figs/zinb_normed_residuals_over_shendure_mBC_UMIs.png
+notebooks/figs/zinb_normed_residuals_over_shendure_mBC_UMIs.svg
+notebooks/shendure_counts_grouped_cardio.txt
+notebooks/shendure_counts_grouped_epi.txt
+notebooks/shendure_counts_grouped_pluri.txt
+notebooks/shendure_counts_grouped.txt
+notebooks/real_noninfl_dist.svg
+notebooks/real_zeroinfl_dist.svg
+notebooks/predictions_r_first_round.csv
+notebooks/negbin_rep_id_CRE_id.RDS
