erin post holiday commit

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,32 @@ notebooks/real_noninfl_dist.svg
 notebooks/real_zeroinfl_dist.svg
 notebooks/predictions_r_first_round.csv
 notebooks/negbin_rep_id_CRE_id.RDS
+notebooks/R_model_files/cohen_multi_negbin_rep_id_CRE_id.RDS
+notebooks/R_model_files/cohen_multi_poisson_rep_id_CRE_id.RDS
+notebooks/R_model_files/cohen_retina_negbin_rep_id_CRE_id.RDS
+notebooks/R_model_files/cohen_retina_poisson_rep_id_CRE_id.RDS
+notebooks/R_model_files/cohen_retina_zip_rep_id_CRE_id.RDS
+notebooks/R_model_files/cohen_retina_znb_rep_id_CRE_id.RDS
+notebooks/R_model_files/shendure_negbin_rep_id_CRE_id.RDS
+notebooks/R_model_files/shendure_poisson_rep_id_CRE_id.RDS
+notebooks/R_model_files/shendure_zip_rep_id_CRE_id_rep_id.RDS
+notebooks/R_model_files/shendure_znb_rep_id_CRE_id_rep_id.RDS
+notebooks/predictions_cohen_multi.csv
+notebooks/predictions_cohen_retina.csv
+notebooks/predictions_shendure.csv
+stdout/testing_round5_45401573_1.err
+stdout/testing_round5_45401573_1.out
+stdout/testing_round5_45401619_2.err
+stdout/testing_round5_45401619_2.out
+stdout/testing_round5_45401619_3.err
+stdout/testing_round5_45401619_3.out
+stdout/testing_round5_45401619_4.err
+stdout/testing_round5_45401619_4.out
+stdout/testing_round5_45401619_5.err
+stdout/testing_round5_45401619_5.out
+stdout/testing_round5_45401619_6.err
+stdout/testing_round5_45401619_6.out
+stdout/testing_round5_45401619_7.err
+stdout/testing_round5_45401619_7.out
+stdout/testing_round5_45401619_8.err
+stdout/testing_round5_45401619_8.out
