ignore checkpoints in preprocessing

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+preprocessing/.ipynb_checkpoints/
 .ipynb_checkpoints/Data_exploration-checkpoint.ipynb
 .ipynb_checkpoints/mcn-checkpoint.ipynb
 notebooks/.ipynb_checkpoints/Data_exploration-checkpoint.ipynb
