--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,29 @@ stdout/testing_round5_45401619_7.err
 stdout/testing_round5_45401619_7.out
 stdout/testing_round5_45401619_8.err
 stdout/testing_round5_45401619_8.out
+notebooks/sim_pred_zinb_dist.svg
+notebooks/sim_pred_zinb_fv.svg
+stdout/testing_round4_47216387_1.err
+stdout/testing_round4_47216387_1.out
+stdout/testing_round4_47216387_2.err
+stdout/testing_round4_47216387_2.out
+stdout/testing_round4_47216387_3.err
+stdout/testing_round4_47216387_3.out
+stdout/testing_round4_47216387_4.err
+stdout/testing_round4_47216387_4.out
+stdout/testing_round4_47216387_5.err
+stdout/testing_round4_47216387_5.out
+stdout/testing_round4_47216387_6.err
+stdout/testing_round4_47216387_6.out
+stdout/testing_round4_47216387_7.err
+stdout/testing_round4_47216387_7.out
+stdout/testing_round4_47216387_8.err
+stdout/testing_round4_47216387_8.out
+stdout/testing_round4_47216387_9.err
+stdout/testing_round4_47216387_9.out
+stdout/testing_round4_47216387_10.err
+stdout/testing_round4_47216387_10.out
+stdout/testing_round4_47216387_11.err
+stdout/testing_round4_47216387_11.out
+stdout/testing_round4_47216387_12.err
+stdout/testing_round4_47216387_12.out
