--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,27 @@ stdout/testing_round4_47216387_11.err
 stdout/testing_round4_47216387_11.out
 stdout/testing_round4_47216387_12.err
 stdout/testing_round4_47216387_12.out
+stdout/testing_round4_48118420_1.err
+stdout/testing_round4_48118420_1.out
+stdout/testing_round4_48118420_2.err
+stdout/testing_round4_48118420_2.out
+stdout/testing_round4_48120404_1.err
+stdout/testing_round4_48120404_1.out
+stdout/testing_round4_48120404_2.err
+stdout/testing_round4_48120404_2.out
+stdout/testing_round4_48120404_3.err
+stdout/testing_round4_48120404_3.out
+stdout/testing_round4_48120404_4.err
+stdout/testing_round4_48120404_4.out
+stdout/testing_round4_48120404_5.err
+stdout/testing_round4_48120404_5.out
+stdout/testing_round4_48120404_6.err
+stdout/testing_round4_48120404_6.out
+stdout/testing_round4_48120404_7.err
+stdout/testing_round4_48120404_7.out
+stdout/testing_round4_48120404_8.err
+stdout/testing_round4_48120404_8.out
+stdout/testing_round4_48120404_9.err
+stdout/testing_round4_48120404_9.out
+stdout/testing_round4_48120404_10.err
+stdout/testing_round4_48120404_10.out
