+ analysis of seelng single cell transcriptome

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ mcn_workbench.ipynb
 __pycache__/
 *.py[cod]
 *.h5ad
+*.tsv
 preprocessing/.ipynb_checkpoints/
 .ipynb_checkpoints/Data_exploration-checkpoint.ipynb
 .ipynb_checkpoints/mcn-checkpoint.ipynb
